--- a/www/templates/privacyPolicy.html
+++ b/www/templates/privacyPolicy.html
@@ -1,9 +1,22 @@
 <ion-view title="Privacy Policy" id="page4">
  <ion-content padding="true" class="has-header">
   
-  <img src="img/sports.jpg" style="width: 100%;">
-  <div class="spacer" style="height: 30px;"></div>
-  <h1 style="color:#ee6129;"> Privacy Policy </h1>
+   <div class = "row">
+   <div class = "col col-25">
+      <img src="img/yourpt.jpeg" style="display: block; width: 95%;" >
+     </div>
+    <div class = "col col-50" style="text-align: center;">
+      <img src="img/fKRtkjMGSLaR6PbP6ujP_logo-1.png"style="display: block; width: 40%; height: auto; margin-left: auto; margin-right: auto;">
+     </div>
+    <div class = "col col-25" style="text-align: right;padding-left: 10%;">
+      <img src="img/better.png" style="display: block; width: 70%;">
+      </div>
+      </div>
+    <div class="spacer" style="height: 30px;"></div>
+  <div id="contactMe-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#ee6129;font-size:18px;">Privacy Policy </p>
+        
+    </div>
   <div class="spacer" style="height: 15px;"></div>
   <ul></ul><li>This form collects your name, email, phone number and goal regarding your fitness training.<br></li> 
 <li>The purpose for collecting this data is to know you and contact you regarding your training.<br></li> 
