--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -3,34 +3,49 @@
     <img src="img/fKRtkjMGSLaR6PbP6ujP_logo-1.png"style="display: block; width: 10%; height: auto; margin-left: auto; margin-right: auto;">
 </ion-header-bar>
   <ion-content padding="true" class="has-header">
-  <img src="img/box.jpg" style="width: 100%;">
-  <div class="spacer" style="height: 30px;"></div>
-  <h1 style="color:#ee6129;"> Our Profile </h1>
+   <div class = "row">
+   <div class = "col col-25">
+      <img src="img/yourpt.jpeg" style="display: block; width: 95%;" >
+     </div>
+    <div class = "col col-50" style="text-align: center;">
+      <img src="img/fKRtkjMGSLaR6PbP6ujP_logo-1.png"style="display: block; width: 40%; height: auto; margin-left: auto; margin-right: auto;">
+     </div>
+    <div class = "col col-25" style="text-align: right;padding-left: 10%;">
+      <img src="img/better.png" style="display: block; width: 70%;">
+      </div>
+      </div>
+    <div class="spacer" style="height: 30px;"></div>
+ <div id="contactMe-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#ee6129;font-size:18px;">Our Profile / About Us</p>
+        
+    </div>
   <div class="spacer" style="height: 15px;"></div>
-  	Mosh Fitness was built on one simple idea.
+  	
+<b>Mosh fitness</b> , We believe your mind is your greatest asset / tool ! Together with your body we inspire you to achieve your goals & to be the excellent you. 
 
-That idea was that everyone regardless of current ability would benefit from working with a qualified fitness or wellness professional at some point.
-<div class="spacer" style="height: 30px;"></div>
-<h3 style="color:#ee6129;">OUR AIM</h3>
+<h3 style="color:#ee6129;">Aims </h3>
+We Specialise in: 
 
-To deliver outstanding results whilst giving our clients an experience that is as professional and enjoyable as possible.
-<div class="spacer" style="height: 30px;"></div>
-<h3 style="color:#ee6129;">WHO ARE WE</h3>
 
-A team of highly experienced and skilled professionals that have come together to offer our clients an experience that is hard to find and that goes above and beyond your “normal personal training experience”.
+<ul style="text-transform: uppercase; padding: 2px;">
+<li>Weight & inch loss</li>
+<li>Weight gain </li>
+<li>Body fat reduction </li>
+<li>Strength & conditioning </li>
+<li>Competition prep </li>
+<li>High intensity interval training </li>
+<li>Callisthenics </li>
+<li>Muaythai boxing </li>
+<li>Boxing </li>
+<li>Exercise Programs </li>
+<li>Mindfulness/ Life style coaching( NLP)</li>
+<li>Healthy eating & Nutrition Advice </li>
 
-We understand that with demanding lifestyles, todays professionals can struggle to prioritise exercise, fitness or wellness into an effective regime so this is where we are different in we accommodate everyone that has made the step to want to change for the better – We show them how.
+</ul>
+  <div class="spacer" style="height: 15px;"></div>
 
-With our experience know that every person we will work with is individual so we adapt and tailor our training, nutritional programmes and most of all the experience. We work with specific body goals whether it be for long term health and wellness goals, an upcoming event or professional sportsperson or Athlete.
-
-We really do cover all areas of training always striving to be the best trainers and coaches that we can be.
-
-Our trainers, coaches and Therapists work together with you to thoroughly plan EVERY step of your journey and look after you throughout.
-<div class="spacer" style="height: 30px;"></div>
-<h3 style="color:#ee6129;">CLIENT EXPERIENCE</h3>
-
-Enjoyable and Results!
-No part of your journey is left to chance with us, we make sure that you feel that you have all the support you could want or need throughout.
+<h4>Please register your interest for a PT Consultation & we will contact you within 
+24HRS to book you in.  </h4>
   	
   	
   </ion-content>
