--- a/www/templates/personalTrainingEnquiry.html
+++ b/www/templates/personalTrainingEnquiry.html
@@ -3,19 +3,19 @@
     
    <div class = "row">
    <div class = "col col-25">
-      <img src="img/yourpt.jpeg" >
+      <img src="img/yourpt.jpeg" style="display: block; width: 95%;" >
      </div>
     <div class = "col col-50" style="text-align: center;">
       <img src="img/fKRtkjMGSLaR6PbP6ujP_logo-1.png"style="display: block; width: 40%; height: auto; margin-left: auto; margin-right: auto;">
      </div>
     <div class = "col col-25" style="text-align: right;padding-left: 10%;">
-      <img src="img/better.png" style="display: block; width: 60%;">
+      <img src="img/better.png" style="display: block; width: 70%;">
       </div>
       </div>
     <div class="spacer" style="height: 30px;"></div>
     
     <div id="contactMe-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#000000;font-size:16px;">REGISTER FOR YOUR FREE FITNESS
+      <p style="color:#ee6129;font-size:18px;">REGISTER FOR YOUR FREE FITNESS
         <br> CONSULTATION </p>
         
     </div>
