Adding extra heading

--- a/www/templates/personalTrainingEnquiry.html
+++ b/www/templates/personalTrainingEnquiry.html
@@ -15,6 +15,7 @@
     <div class="spacer" style="height: 30px;"></div>
     
     <div id="contactMe-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
+     <h1>Personal Training Enquiry</h1>
       <p style="color:#ee6129;font-size:18px;">REGISTER FOR YOUR FREE FITNESS
         <br> CONSULTATION </p>
         
