--- a/www/templates/privacyPolicy.html
+++ b/www/templates/privacyPolicy.html
@@ -1,24 +1,26 @@
 <ion-view title="Privacy Policy" id="page4">
- <ion-content padding="true" class="has-header">
+ <ion-content padding="true">
+    
+    <a href="#/home" style="text-decoration: none;"><button class="button-small button-positive button">Back</button></a>
   
    <div class = "row">
    <div class = "col col-25">
       <img src="img/yourpt.jpeg" style="display: block; width: 95%;" >
      </div>
     <div class = "col col-50" style="text-align: center;">
-      <img src="img/fKRtkjMGSLaR6PbP6ujP_logo-1.png"style="display: block; width: 40%; height: auto; margin-left: auto; margin-right: auto;">
+      <img src="img/fKRtkjMGSLaR6PbP6ujP_logo-1.png"style="display: block; width: 33%; height: auto; margin-left: auto; margin-right: auto;">
      </div>
     <div class = "col col-25" style="text-align: right;padding-left: 10%;">
-      <img src="img/better.png" style="display: block; width: 70%;">
+      <img src="img/better.png" style="display: block; width: 65%;">
       </div>
       </div>
     <div class="spacer" style="height: 30px;"></div>
   <div id="contactMe-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#ee6129;font-size:18px;">Privacy Policy </p>
+      <p style="color:#ee6129;font-size:22px;">Privacy Policy </p>
         
     </div>
   <div class="spacer" style="height: 15px;"></div>
-  <ul></ul><li>This form collects your name, email, phone number and goal regarding your fitness training.<br></li> 
+  <ul style="font-size: 20px;"><li>This form collects your name, email, phone number and goal regarding your fitness training.<br></li> 
 <li>The purpose for collecting this data is to know you and contact you regarding your training.<br></li> 
 <li>The data is accessed only by trainers in Mosh Fitness Group.<br></li> 
 <li>The data is stored in our secure database for 3 months unless you start training with us. In this case, if you want to export or delete your data you would require to contact us using email info@moshfitness.london.<br></li> 
@@ -26,3 +28,9 @@
 <li>The data will be stored and processed inside the UK. <br></li> </ul>
 </ion-content>
 </ion-view>
+<style type="text/css">
+  li
+  {
+    padding: 4px !important;
+  }
+</style>
