--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,33 +1,34 @@
-<ion-view title="Profile" id="page3">
-	<ion-header-bar align-title=”center”>
-    <img src="img/fKRtkjMGSLaR6PbP6ujP_logo-1.png"style="display: block; width: 10%; height: auto; margin-left: auto; margin-right: auto;">
-</ion-header-bar>
-  <ion-content padding="true" class="has-header">
+<ion-view title="Profile" id="Profile">
+  
+  
+  <ion-content padding="true">
+     <a href="#/home" style="text-decoration: none; "><button class="button-small button-positive button" style="font-size: 16px;">Back</button></a>
    <div class = "row">
    <div class = "col col-25">
       <img src="img/yourpt.jpeg" style="display: block; width: 95%;" >
      </div>
     <div class = "col col-50" style="text-align: center;">
-      <img src="img/fKRtkjMGSLaR6PbP6ujP_logo-1.png"style="display: block; width: 40%; height: auto; margin-left: auto; margin-right: auto;">
+      <img src="img/fKRtkjMGSLaR6PbP6ujP_logo-1.png"style="display: block; width: 33%; height: auto; margin-left: auto; margin-right: auto;">
      </div>
     <div class = "col col-25" style="text-align: right;padding-left: 10%;">
-      <img src="img/better.png" style="display: block; width: 70%;">
+      <img src="img/better.png" style="display: block; width: 65%;">
       </div>
       </div>
     <div class="spacer" style="height: 30px;"></div>
  <div id="contactMe-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#ee6129;font-size:18px;">Our Profile / About Us</p>
+      <p style="color:#ee6129;font-size:22px;">Our Profile / About Us</p>
         
     </div>
   <div class="spacer" style="height: 15px;"></div>
-  	
-<b>Mosh fitness</b> , We believe your mind is your greatest asset / tool ! Together with your body we inspire you to achieve your goals & to be the excellent you. 
+  <div class="col" style="font-size: 20px;">	
+<b>Mosh fitness</b> , We believe your mind is your greatest asset / tool ! Together with your body we inspire you to achieve your goals & to be the excellent you. </div>
+<div class="col" style="font-size: 20px;">
 
-<h3 style="color:#ee6129;">Aims </h3>
+<h2 style="color:#ee6129;">Aims </h2>
 We Specialise in: 
 
 
-<ul style="text-transform: uppercase; padding: 2px;">
+<ul style="text-transform: uppercase; padding: 4px;">
 <li>Weight & inch loss</li>
 <li>Weight gain </li>
 <li>Body fat reduction </li>
@@ -42,11 +43,18 @@ We Specialise in:
 <li>Healthy eating & Nutrition Advice </li>
 
 </ul>
+</div>
   <div class="spacer" style="height: 15px;"></div>
 
-<h4>Please register your interest for a PT Consultation & we will contact you within 
-24HRS to book you in.  </h4>
+<h3>Please register your interest for a PT Consultation & we will contact you within 
+24HRS to book you in.  </h3>
   	
   	
   </ion-content>
 </ion-view>
+<style type="text/css">
+  li
+  {
+    padding: 4px !important;
+  }
+</style>
