font size increased

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -13,13 +13,13 @@
       <img src="img/better.png" style="display: block; width: 65%;">
       </div>
       </div>
-    <div class="spacer" style="height: 30px;"></div>
+    <div class="spacer" style="height: 70px;"></div>
     <div class = "col" style="text-align: center;">
-   <a href="#/page1/personal-training-enquiry" style="text-decoration: none;"> <button class="button button-large button-balanced button-block" style="font-size: 30px; padding: 10px; margin: 10px;" >Personal Training Enquiry </button></a>
+   <a href="#/page1/personal-training-enquiry" style="text-decoration: none;"> <button class="button button-large button-balanced button-block" style="font-size: 70px !important; padding: 10px; margin: 10px;" >Personal Training Enquiry </button></a>
 </div>
-    <div class="spacer" style="height: 30px;"></div>
+    <div class="spacer" style="height: 60px;"></div>
  <div class = "col" style="text-align: center;">
-   <a href="#/profile" style="text-decoration: none;">   <button class="button button-large button-balanced button-block" style="font-size: 30px; padding:10px; margin: 10px">Our Profile </button>
+   <a href="#/profile" style="text-decoration: none;">   <button class="button button-large button-balanced button-block" style="font-size: 70px !important; padding:10px; margin: 10px">Our Profile </button>
 </div>
   </ion-content>
 
